tests/invalid/wrong_arg_count_singular/main.py
def double(x: int) -> int:
    return x + x

y: int = double(1, 2)
